# tuiworker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MUSIC_PLAYER_STATUS_REPORT.md  MUSIC_SOURCES_IMPLEMENTATION.md  Makefile  README.en.md  README.md  create-modules.sh
.agents/skills/windows-ui-automation/references/: advanced-patterns.md  threat-model.md
.claude/skills/windows-ui-automation/references/: security-examples.md
.github/workflows/: build-packages.yml  build.yml  create-release.yml
.kiro/skills/windows-ui-automation/: SKILL.md
.sisyphus/: ralph-loop.local.md
config/: config.toml.example
crates/config_manager/: Cargo.toml
crates/config_manager/src/: app_config.rs  error.rs  lib.rs  manager.rs
crates/core/: Cargo.toml
crates/core/src/: app.rs  app.rs.broken  event.rs  lib.rs  module.rs
crates/logging/: Cargo.toml
crates/logging/src/: init.rs
crates/modules/diary/: Cargo.toml
crates/modules/diary/src/: lib.rs  lib.rs.bak
crates/modules/filebrowser/: Cargo.toml
crates/modules/filebrowser/src/: file_browser.rs  file_browser.rs.backup  file_entry.rs  lib.rs
crates/modules/git/: Cargo.toml
crates/modules/git/src/: lib.rs
crates/modules/mail/: Cargo.toml
crates/modules/mail/src/: lib.rs
crates/modules/music/: Cargo.toml
crates/modules/music/src/: lib.rs
crates/modules/note/: Cargo.toml
crates/modules/note/src/: lib.rs
crates/modules/project/: Cargo.toml
crates/modules/project/src/: lib.rs
crates/modules/terminal/: Cargo.toml
crates/modules/terminal/src/: lib.rs
crates/modules/todo/: Cargo.toml
crates/modules/todo/src/: item.rs  lib.rs  todo_impl.rs
crates/music_model/: Cargo.toml
crates/music_model/src/: config.rs  controller.rs  error.rs  events.rs  lib.rs  lyrics.rs  progress.rs  queue.rs  source.rs  types.rs  types_test.rs
crates/storage/: Cargo.toml
crates/storage/src/: database.rs  error.rs  lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: layout.rs  lib.rs  theme.rs  widgets.rs
docs/: api.md  implementation-plan.md  overview.md  prd.txt
docs/plans/: 2026-03-07-music-player-redesign-design.md
src/: Cargo.toml  app.rs  app.rs.backup  app_new_tabs.rs  app_part1.rs  cli.rs  event.rs  file_handler.rs  logger.rs  main.rs  mod.rs  models.rs  storage.rs  terminal.rs  terminal_manager.rs  ui.rs
src/tests/: e2e_filebrowser.rs
wiki/: Configuration.md  Developer-Guide.md  FAQ.md  Features.md  Home.md  Installation.md  Keyboard-Shortcuts.md
