[package]
name = "tuiworker"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
portable-pty = "0.9"
log = "0.4"
env_logger = "0.10"
vte = "0.13"
strip-ansi-escapes = "0.2"
chrono-english = "0.1"
