[workspace]
members = [
    "crates/core",
    "crates/storage",
    "crates/logging",
    "crates/config_manager",
    "crates/ui",
    "crates/modules/filebrowser",
    "crates/modules/todo",
    "crates/modules/note",
    "crates/modules/diary",
    "crates/modules/terminal",
    "crates/modules/git",
    "crates/modules/music",
    "crates/modules/project",
    "crates/modules/mail",
    "src",
]
resolver = "2"

[workspace.metadata.static-build]
exclude-members = ["mail", "git", "terminal", "music", "project"]

[workspace.package]
version = "0.1.0-alpha"
edition = "2021"
authors = ["gh503 <angus_robot@163.com>"]
license = "MIT"
repository = "https://github.com/gh503/tuiworker"

[workspace.dependencies]
# 核心依赖
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# TUI 依赖
ratatui = "0.26"
crossterm = "0.27"

# 存储依赖
sled = "0.34"

# 配置依赖
config = "0.14"
dirs = "5.0"
toml = "0.8"

# 日志依赖
log = "0.4"
fern = "0.6"

# 文件操作
ignore = "0.4"
shell-words = "1.0"

# 语法高亮
syntect = "5.1"

# 音频播放
symphonia = { version = "0.5", features = ["all"] }
rodio = { version = "0.19", features = ["symphonia-all"] }
lofty = "0.18"
parking_lot = "0.12"

# 邮件
imap = { version = "3.0.0-alpha.15", features = ["rustls-tls"] }
lettre = { version = "0.11", default-features = false, features = ["file-transport", "smtp-transport", "builder", "tokio1", "tokio1-rustls", "serde", "rustls-tls"] }
mailparse = "0.14"

# Git
git2 = { version = "0.20", default-features = false }

# 日历/农历
lunar-rs = "0.4"
chinese-calendar = "0.1"

# 伪终端
portable-pty = "0.8"

# 其他
opener = "0.6"
atty = "0.2"

[workspace.dependencies]
copier = "0.10"

[workspace.dependencies.logging]
path = "crates/logging"
