[package]
name = "tuiworker"
version = "0.1.0-alpha"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/gh503/tuiworker"
description = "A terminal user interface (TUI) workstation application"

[[bin]]
name = "tuiworker"
path = "main.rs"

# DEB package configuration for Debian/Ubuntu
[package.metadata.deb]
name = "tuiworker"
maintainer = "gh503 <angus_robot@163.com>"
copyright = "2025, tuiworker contributors"
license-file = "LICENSE"
extended-description-file = "README.md"
section = "utils"
priority = "optional"
assets = [
  ["target/release/tuiworker", "usr/bin/", "755"],
  ["README.md", "usr/share/doc/tuiworker/", "644"],
  ["LICENSE", "usr/share/doc/tuiworker/", "644"],
]
depends = "$auto"

# RPM package configuration for Fedora/RHEL/CentOS
[package.metadata.generate-rpm]
name = "tuiworker"
license = "MIT"
summary = "A terminal user interface (TUI) workstation application"
description = "TUIWorker is a terminal workspace"
assets = [
  { source = "target/release/tuiworker", dest = "/usr/bin/tuiworker", mode = "755" },
  { source = "README.md", dest = "/usr/share/doc/tuiworker/", mode = "644", doc = true },
  { source = "LICENSE", dest = "/usr/share/licenses/tuiworker/", mode = "644" },
]

[features]
default = ["music", "git", "terminal"]
static-build = []

[dependencies]
core = { path = "../crates/core" }
logging = { path = "../crates/logging" }
ui = { path = "../crates/ui" }
storage = { path = "../crates/storage" }
filebrowser = { path = "../crates/modules/filebrowser" }
todo = { path = "../crates/modules/todo" }
note = { path = "../crates/modules/note", optional = true }
diary = { path = "../crates/modules/diary", optional = true }
project = { path = "../crates/modules/project", optional = true }
mail = { path = "../crates/modules/mail", optional = true }
music = { path = "../crates/modules/music", optional = true }
git = { path = "../crates/modules/git", optional = true }
terminal = { path = "../crates/modules/terminal", optional = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
log = { workspace = true }
anyhow = { workspace = true }
atty = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
crossterm = "0.27"
