[package]
name = "config_manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
config = { version = "0.14", features = ["toml"] }
dirs = "5.0"
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
log = { workspace = true }
