[package]
name = "music_model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Configuration
toml = { workspace = true }
dirs = { workspace = true }

# Audio playback
rodio = { workspace = true }
symphonia = { workspace = true }

# Concurrency
parking_lot = { workspace = true }
rand = "0.8"

# Music streaming APIs
reqwest = { version = "0.12", features = ["json", "cookies", "blocking"] }
url = "2.5"

# NAS support (optional features)
smb = { version = "0.4", optional = true }

[features]
default = []
nas-smb = ["smb"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
