[package]
name = "mail"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
core = { path = "../../core" }
ui = { path = "../../ui" }
crossterm = { workspace = true }
ratatui = { workspace = true }
anyhow = { workspace = true }
imap = { version = "2.4", features = ["rustls-tls"] }
native-tls = { version = "0.2", features = ["vendored"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls1_28", "builder", "smtp-transport"] }
mailparse = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
