[package]
name = "mail"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
core = { path = "../../core" }
ui = { path = "../../ui" }
crossterm = { workspace = true }
ratatui = { workspace = true }
anyhow = { workspace = true }
imap = { version = "3.0.0-alpha.15", features = ["rustls-tls"] }
lettre = { version = "0.11", default-features = false, features = ["file-transport", "smtp-transport", "builder", "tokio1", "serde"] }
mailparse = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
