[package]
name = "music"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
core = { path = "../../core" }
ui = { path = "../../ui" }
music_model = { path = "../../music_model" }
crossterm = { workspace = true }
ratatui = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
rand = "0.8"
parking_lot = { workspace = true }
